- Spacing of the 4's is weird. Hoping this is a fix Works fine locally.

--- a/assets/css/404.scss
+++ b/assets/css/404.scss
@@ -272,7 +272,7 @@
   
     position: relative;
     width: 12.2rem;
-    margin: 0 1rem;
+    margin: 0 2.1rem;
   
     &:hover .circle {
       background-color: #01ac88;
@@ -313,7 +313,7 @@
     transform: translateX(-50%);
     width: 7.2rem;
     height: 7.2rem;
-    border: 0.4rem solid #293b49;
+    border: 0.3rem solid #293b49;
     background-color: white;
     border-radius: 50%;
   
